tests/compiletests/ui/lang/asm/block_tracking_fail.stderr
error: `noreturn` requires a terminator at the end
  --> $DIR/block_tracking_fail.rs:12:9
   |
12 |         asm!("", options(noreturn));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trailing terminator `OpUnreachable` requires `options(noreturn)`
  --> $DIR/block_tracking_fail.rs:19:9
   |
19 |         asm!("OpUnreachable");
   |         ^^^^^^^^^^^^^^^^^^^^^

error: expected `OpLabel` after terminator `OpKill`
  --> $DIR/block_tracking_fail.rs:26:9
   |
26 | /         asm!(
27 | |             "OpKill",
28 | |             "%sum = OpFAdd _ {x} {x}",
29 | |             x = in(reg) x,
30 | |         );
   | |_________^

error: aborting due to 3 previous errors

